--- a/main/src/style/login.css
+++ b/main/src/style/login.css
@@ -11,3 +11,22 @@
     float: none;
     margin: auto;
 }
+
+.user-item {
+    float: left;
+    width: 100%;
+    margin-bottom: 10px;
+    border: 2px solid;
+}
+
+.user-item > img {
+    float: left;
+    width: 20%;
+}
+
+.user-item > p {
+    padding-left: 5%;
+    font-size: 37px;
+    float: left;
+    width: 75%;
+}
